fixed ingredient price z-index issue

--- a/app/less/views/store-selection.less
+++ b/app/less/views/store-selection.less
@@ -95,7 +95,9 @@
     background: @white;
     color: @grayLight;
     font-size: 13px;
-    padding: 5px 5px 2px;
+    padding: 7px 5px 2px;
+		position: relative;
+		z-index: 100;
     .border-radius(3px);
   }
 
